--- a/index.html
+++ b/index.html
@@ -29,19 +29,16 @@
         </nav>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com">
-              <img src="./images/envelope(hover).svg" alt="Иконка конверта" />
-              info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111"><img src="./images/phone.svg" alt="Иконка телефона" /> +38 096 111 11 11</a>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <!--Hero-->
+      <!-- Hero -->
       <section class="hero">
         <!-- <img src="https://via.placeholder.com/1600x600" alt="" /> -->
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -54,28 +51,36 @@
           <!--Спрятать заголовок-->
           <ul class="features-list">
             <li class="features-item">
-              <img src="./images/antenna.png" alt="Изображение антенны" />
+              <div class="item-image">
+                <img src="./images/antenna.png" alt="Изображение антенны" />
+              </div>
               <h3 class="item-title">Внимание к деталям</h3>
               <p class="item-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-item">
-              <img src="./images/clock.png" alt="Изображение часов" />
+              <div class="item-image">
+                <img src="./images/clock.png" alt="Изображение часов" />
+              </div>
               <h3 class="item-title">Пунктуальность</h3>
               <p class="item-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-item">
-              <img src="./images/pc.png" alt="Изображение компьютера" />
+              <div class="item-image">
+                <img src="./images/pc.png" alt="Изображение компьютера" />
+              </div>
               <h3 class="item-title">Планирование</h3>
               <p class="item-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-item">
-              <img src="./images/spaceman.png" alt="Изображение космонавта" />
+              <div class="item-image">
+                <img src="./images/spaceman.png" alt="Изображение космонавта" />
+              </div>
               <h3 class="item-title">Современные технологии</h3>
               <p class="item-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -116,9 +121,11 @@
           <h2 class="title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./images/team-John.jpg" alt="Фото Николая Кучеренко" />
+              <div class="team-photo">
+                <img src="./images/team-John.jpg" alt="Фото Николая Кучеренко" />
+              </div>
               <h3 class="item-title">Николай Кучеренко</h3>
-              <p class="profession" lang="en">Product Designer</p>
+              <p class="item-description" lang="en">Product Designer</p>
               <ul class="social">
                 <li class="social-item">
                   <a href="#"><img src="./images/insta(hover).png" alt="Иконка Инстаграм" /></a>
@@ -135,9 +142,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/team-Marta.jpg" alt="Фото Ольги Ивановой" />
+              <div class="team-photo">
+                <img src="./images/team-Marta.jpg" alt="Фото Ольги Ивановой" />
+              </div>
               <h3 class="item-title">Ольга Иванова</h3>
-              <p class="profession" lang="en">Frontend Developer</p>
+              <p class="item-description" lang="en">Frontend Developer</p>
               <ul class="social">
                 <li class="social-item">
                   <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
@@ -154,9 +163,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/team-Robert.jpg" alt="Фото Андрея Шевченко" />
+              <div class="team-photo">
+                <img src="./images/team-Robert.jpg" alt="Фото Андрея Шевченко" />
+              </div>
               <h3 class="item-title">Андрей Шевченко</h3>
-              <p class="profession" lang="en">Marketing</p>
+              <p class="item-description" lang="en">Marketing</p>
               <ul class="social">
                 <li class="social-item">
                   <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
@@ -173,9 +184,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/team-Martin.jpg" alt="Фото Ивана Николаева" />
+              <div class="team-photo">
+                <img src="./images/team-Martin.jpg" alt="Фото Ивана Николаева" />
+              </div>
               <h3 class="item-title">Иван Николаев</h3>
-              <p class="profession" lang="en">UI Designer</p>
+              <p class="item-description" lang="en">UI Designer</p>
               <ul class="social">
                 <li class="social-item">
                   <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
