довертывал index.html
доверстывал футер. не могу побороть "клиентов"

--- a/index.html
+++ b/index.html
@@ -236,40 +236,46 @@
     </main>
     <footer>
       <div class="container">
-        <a class="logo" href="#top"><span class="active">Web</span> Studio</a>
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="contacts-item">
-              <a href="mailto:info@example.com">info@example.com</a>
+        <div>
+          <a class="logo" href="#top"><span class="active">Web</span> Studio</a>
+          <address class="address">
+            <ul class="address-list">
+              <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="contacts-item">
+                <a href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="contacts-item">
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join-social">
+          <p class="join">Присоединяйтесь</p>
+          <ul class="social">
+            <li class="social-item">
+              <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
             </li>
-            <li class="contacts-item">
-              <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <li class="social-item">
+              <a href="#"><img src="./images/f-twitter.png" alt="Иконка Твиттер" /></a>
+            </li>
+            <li class="social-item">
+              <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+            </li>
+            <li class="social-item">
+              <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
             </li>
           </ul>
-        </address>
-        <p class="join">Присоединяйтесь</p>
-        <ul class="social">
-          <li class="social-item">
-            <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
-          </li>
-          <li class="social-item">
-            <a href="#"><img src="./images/f-twitter.png" alt="Иконка Твиттер" /></a>
-          </li>
-          <li class="social-item">
-            <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
-          </li>
-          <li class="social-item">
-            <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
-          </li>
-        </ul>
-        <p class="join">Подпишитесь на рассылку</p>
-        <!-- <form action="">
-                    <input type="email" name="" id="" placeholder="E-mail" />
-                    <input type="submit" value="Подписаться" />
-                </form> -->
-        <small class="copy">2020 | Developed by GoIT Students</small>
+        </div>
+        <div>
+          <p class="join form">Подпишитесь на рассылку</p>
+          <!-- <form action="">
+                      <input type="email" name="" id="" placeholder="E-mail" />
+                      <input type="submit" value="Подписаться" />
+                  </form> -->
+        </div>
       </div>
+      <small class="copy">2020 | Developed by GoIT Students</small>
     </footer>
   </body>
 </html>
