--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
           <address class="address">
             <ul class="address-list">
               <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="contacts-item">
+              <li class="address-item">
                 <a href="mailto:info@example.com">info@example.com</a>
               </li>
-              <li class="contacts-item">
+              <li class="address-item">
                 <a href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
@@ -267,8 +267,8 @@
             </li>
           </ul>
         </div>
-        <div>
-          <p class="join form">Подпишитесь на рассылку</p>
+        <div class="join-form">
+          <p class="join">Подпишитесь на рассылку</p>
           <!-- <form action="">
                       <input type="email" name="" id="" placeholder="E-mail" />
                       <input type="submit" value="Подписаться" />
