--- a/index.html
+++ b/index.html
@@ -124,85 +124,93 @@
               <div class="team-photo">
                 <img src="./images/team-John.jpg" alt="Фото Николая Кучеренко" />
               </div>
-              <h3 class="item-title">Николай Кучеренко</h3>
-              <p class="item-description" lang="en">Product Designer</p>
-              <ul class="social">
-                <li class="social-item">
-                  <a href="#"><img src="./images/insta(hover).png" alt="Иконка Инстаграм" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
-                </li>
-              </ul>
+              <div class="team-item-info">
+                <h3 class="item-title">Николай Кучеренко</h3>
+                <p class="item-description" lang="en">Product Designer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="#"><img src="./images/insta(hover).png" alt="Иконка Инстаграм" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <div class="team-photo">
                 <img src="./images/team-Marta.jpg" alt="Фото Ольги Ивановой" />
               </div>
-              <h3 class="item-title">Ольга Иванова</h3>
-              <p class="item-description" lang="en">Frontend Developer</p>
-              <ul class="social">
-                <li class="social-item">
-                  <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
-                </li>
-              </ul>
+              <div class="team-item-info">
+                <h3 class="item-title">Ольга Иванова</h3>
+                <p class="item-description" lang="en">Frontend Developer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <div class="team-photo">
                 <img src="./images/team-Robert.jpg" alt="Фото Андрея Шевченко" />
               </div>
-              <h3 class="item-title">Андрей Шевченко</h3>
-              <p class="item-description" lang="en">Marketing</p>
-              <ul class="social">
-                <li class="social-item">
-                  <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
-                </li>
-              </ul>
+              <div class="team-item-info">
+                <h3 class="item-title">Андрей Шевченко</h3>
+                <p class="item-description" lang="en">Marketing</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <div class="team-photo">
                 <img src="./images/team-Martin.jpg" alt="Фото Ивана Николаева" />
               </div>
-              <h3 class="item-title">Иван Николаев</h3>
-              <p class="item-description" lang="en">UI Designer</p>
-              <ul class="social">
-                <li class="social-item">
-                  <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
-                </li>
-                <li class="social-item">
-                  <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
-                </li>
-              </ul>
+              <div class="team-item-info">
+                <h3 class="item-title">Иван Николаев</h3>
+                <p class="item-description" lang="en">UI Designer</p>
+                <ul class="social">
+                  <li class="social-item">
+                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                  </li>
+                  <li class="social-item">
+                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
