--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,10 @@
         </nav>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com">
-              <img src="./images/envelope(hover).svg" alt="Иконка конверта" />
-              info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111"><img src="./images/phone.svg" alt="Иконка телефона" /> +38 096 111 11 11</a>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -130,10 +127,10 @@
                 <div class="item-info">
                   <h2 class="item-title">Inspiration has no Borders</h2>
                   <p class="filter-type">Веб-сайт</p>
+                  <p class="item-description">
+                    Какой-то текст на тему
+                  </p>
                 </div>
-                <p class="item-description">
-                  Какой-то текст на тему
-                </p>
               </a>
             </li>
             <li class="works-item">
@@ -189,10 +186,10 @@
           <address class="address">
             <ul class="address-list">
               <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="contacts-item">
+              <li class="address-item">
                 <a href="mailto:info@example.com">info@example.com</a>
               </li>
-              <li class="contacts-item">
+              <li class="address-item">
                 <a href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
@@ -215,7 +212,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="join-form">
           <p class="join">Подпишитесь на рассылку</p>
           <!-- <form action="">
                       <input type="email" name="" id="" placeholder="E-mail" />
