Fixed Home work
1. Заменил иконки соц сетей на правильные
1.1. Сделал для них правильный hover
2. Добавил иконки конверта и телефона в хедер
3. Изменил цвет текста заголовка Героя

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
         </nav>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com"
+              ><img src="./images/envelope.svg" alt="Иконка конверта" /> info@devstudio.com</a
+            >
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111"><img src="./images/phone.svg" alt="Иконка телефона" /> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -129,16 +131,16 @@
                 <p class="item-description" lang="en">Product Designer</p>
                 <ul class="social">
                   <li class="social-item">
-                    <a href="#"><img src="./images/insta(hover).png" alt="Иконка Инстаграм" /></a>
+                    <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                    <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                    <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                    <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -152,16 +154,16 @@
                 <p class="item-description" lang="en">Frontend Developer</p>
                 <ul class="social">
                   <li class="social-item">
-                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                    <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                    <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                    <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                    <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -175,16 +177,16 @@
                 <p class="item-description" lang="en">Marketing</p>
                 <ul class="social">
                   <li class="social-item">
-                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                    <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                    <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                    <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                    <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -198,16 +200,16 @@
                 <p class="item-description" lang="en">UI Designer</p>
                 <ul class="social">
                   <li class="social-item">
-                    <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+                    <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/twitter.png" alt="Иконка Твиттер" /></a>
+                    <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+                    <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
                   </li>
                   <li class="social-item">
-                    <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+                    <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
                   </li>
                 </ul>
               </div>
@@ -262,16 +264,16 @@
           <p class="join">Присоединяйтесь</p>
           <ul class="social">
             <li class="social-item">
-              <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+              <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/f-twitter.png" alt="Иконка Твиттер" /></a>
+              <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+              <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+              <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
             </li>
           </ul>
         </div>
