--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,12 @@
         </nav>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com"
+              ><img src="./images/envelope.svg" alt="Иконка конверта" /> info@devstudio.com</a
+            >
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111"><img src="./images/phone.svg" alt="Иконка телефона" /> +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
