--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
           <p class="join">Присоединяйтесь</p>
           <ul class="social">
             <li class="social-item">
-              <a href="#"><img src="./images/instagram.svg" alt="Иконка Инстаграм" /></a>
+              <a href="#"><img src="./images/f-instagram.svg" alt="Иконка Инстаграм" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/twitter.svg" alt="Иконка Твиттер" /></a>
+              <a href="#"><img src="./images/f-twitter.svg" alt="Иконка Твиттер" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/facebook.svg" alt="Иконка Фейсбук" /></a>
+              <a href="#"><img src="./images/f-facebook.svg" alt="Иконка Фейсбук" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/linkedin.svg" alt="Иконка Линкедин" /></a>
+              <a href="#"><img src="./images/f-linkedin.svg" alt="Иконка Линкедин" /></a>
             </li>
           </ul>
         </div>
