--- a/portfolio.html
+++ b/portfolio.html
@@ -201,16 +201,16 @@
           <p class="join">Присоединяйтесь</p>
           <ul class="social">
             <li class="social-item">
-              <a href="#"><img src="./images/insta.png" alt="Иконка Инстаграм" /></a>
+              <a href="#"><img src="./images/f-instagram.svg" alt="Иконка Инстаграм" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/f-twitter.png" alt="Иконка Твиттер" /></a>
+              <a href="#"><img src="./images/f-twitter.svg" alt="Иконка Твиттер" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/facebook.png" alt="Иконка Фейсбук" /></a>
+              <a href="#"><img src="./images/f-facebook.svg" alt="Иконка Фейсбук" /></a>
             </li>
             <li class="social-item">
-              <a href="#"><img src="./images/linkedin.png" alt="Иконка Линкедин" /></a>
+              <a href="#"><img src="./images/f-linkedin.svg" alt="Иконка Линкедин" /></a>
             </li>
           </ul>
         </div>
